// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StatisticsPanel > should render the StatisticsPanel, query for the necessary info, start polling for stats and stop the polling when unmounted 1`] = `
<div
  class="statistics-panel"
>
  <div
    class="statistics-panel__statistics"
  >
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M7,15H9C9,16.08 10.37,17 12,17C13.63,17 15,16.08 15,15C15,13.9 13.96,13.5 11.76,12.97C9.64,12.44 7,11.78 7,9C7,7.21 8.47,5.69 10.5,5.18V3H13.5V5.18C15.53,5.69 17,7.21 17,9H15C15,7.92 13.63,7 12,7C10.37,7 9,7.92 9,9C9,10.1 10.04,10.5 12.24,11.03C14.36,11.56 17,12.22 17,15C17,16.79 15.53,18.31 13.5,18.82V21H10.5V18.82C8.47,18.31 7,16.79 7,15Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
            
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Dusk Price
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M7,15H9C9,16.08 10.37,17 12,17C13.63,17 15,16.08 15,15C15,13.9 13.96,13.5 11.76,12.97C9.64,12.44 7,11.78 7,9C7,7.21 8.47,5.69 10.5,5.18V3H13.5V5.18C15.53,5.69 17,7.21 17,9H15C15,7.92 13.63,7 12,7C10.37,7 9,7.92 9,9C9,10.1 10.04,10.5 12.24,11.03C14.36,11.56 17,12.22 17,15C17,16.79 15.53,18.31 13.5,18.82V21H10.5V18.82C8.47,18.31 7,16.79 7,15Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
            
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Total Market Cap
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="--- DUSK"
        data-tooltip-type="info"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Current Stake
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="--- DUSK"
        data-tooltip-type="info"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Pending Stake
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M21,16.5C21,16.88 20.79,17.21 20.47,17.38L12.57,21.82C12.41,21.94 12.21,22 12,22C11.79,22 11.59,21.94 11.43,21.82L3.53,17.38C3.21,17.21 3,16.88 3,16.5V7.5C3,7.12 3.21,6.79 3.53,6.62L11.43,2.18C11.59,2.06 11.79,2 12,2C12.21,2 12.41,2.06 12.57,2.18L20.47,6.62C20.79,6.79 21,7.12 21,7.5V16.5M12,4.15L6.04,7.5L12,10.85L17.96,7.5L12,4.15M5,15.91L11,19.29V12.58L5,9.21V15.91M19,15.91V9.21L13,12.58V19.29L19,15.91Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Last Block
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3L5,7H8V14H10V7H13M16,17V10H14V17H11L15,21L19,17H16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Total Transactions
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Active Provisioners
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            <span>
              - - -
            </span>
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Pending Provisioners
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M18,11H14.82C14.4,9.84 13.3,9 12,9C10.7,9 9.6,9.84 9.18,11H6C5.67,11 4,10.9 4,9V8C4,6.17 5.54,6 6,6H16.18C16.6,7.16 17.7,8 19,8A3,3 0 0,0 22,5A3,3 0 0,0 19,2C17.7,2 16.6,2.84 16.18,4H6C4.39,4 2,5.06 2,8V9C2,11.94 4.39,13 6,13H9.18C9.6,14.16 10.7,15 12,15C13.3,15 14.4,14.16 14.82,13H18C18.33,13 20,13.1 20,15V16C20,17.83 18.46,18 18,18H7.82C7.4,16.84 6.3,16 5,16A3,3 0 0,0 2,19A3,3 0 0,0 5,22C6.3,22 7.4,21.16 7.82,20H18C19.61,20 22,18.93 22,16V15C22,12.07 19.61,11 18,11M19,4A1,1 0 0,1 20,5A1,1 0 0,1 19,6A1,1 0 0,1 18,5A1,1 0 0,1 19,4M5,20A1,1 0 0,1 4,19A1,1 0 0,1 5,18A1,1 0 0,1 6,19A1,1 0 0,1 5,20Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            15
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Largest Node Cluster
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            North Bergen, US
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Largest Cluster Location
        </span>
      </div>
       
    </div>
  </div>
</div>
`;

exports[`StatisticsPanel > should render the StatisticsPanel, query for the necessary info, start polling for stats and stop the polling when unmounted 2`] = `
<div
  class="statistics-panel"
>
  <div
    class="statistics-panel__statistics"
  >
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M7,15H9C9,16.08 10.37,17 12,17C13.63,17 15,16.08 15,15C15,13.9 13.96,13.5 11.76,12.97C9.64,12.44 7,11.78 7,9C7,7.21 8.47,5.69 10.5,5.18V3H13.5V5.18C15.53,5.69 17,7.21 17,9H15C15,7.92 13.63,7 12,7C10.37,7 9,7.92 9,9C9,10.1 10.04,10.5 12.24,11.03C14.36,11.56 17,12.22 17,15C17,16.79 15.53,18.31 13.5,18.82V21H10.5V18.82C8.47,18.31 7,16.79 7,15Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            0.368
            
            
             
            
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Dusk Price
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M7,15H9C9,16.08 10.37,17 12,17C13.63,17 15,16.08 15,15C15,13.9 13.96,13.5 11.76,12.97C9.64,12.44 7,11.78 7,9C7,7.21 8.47,5.69 10.5,5.18V3H13.5V5.18C15.53,5.69 17,7.21 17,9H15C15,7.92 13.63,7 12,7C10.37,7 9,7.92 9,9C9,10.1 10.04,10.5 12.24,11.03C14.36,11.56 17,12.22 17,15C17,16.79 15.53,18.31 13.5,18.82V21H10.5V18.82C8.47,18.31 7,16.79 7,15Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            168.00M
            
            
             
            
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Total Market Cap
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="58226174.026663415 DUSK"
        data-tooltip-type="info"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value approximate"
          >
            58.23M
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Current Stake
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="2573278.3297094363 DUSK"
        data-tooltip-type="info"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12.335 0.005a12.186 12.186 0 0 0 -2.58 0.204C4.2 1.259 0 6.14 0 11.999 0 17.859 4.203 22.74 9.759 23.79c0.726 0.138 1.476 0.21 2.241 0.21 6.789 0 12.261 -5.64 11.991 -12.49C23.741 5.249 18.599 0.173 12.335 0.005Zm0.207 21.58c-0.204 0.012 -0.336 -0.222 -0.21 -0.384 1.974 -2.541 3.153 -5.733 3.153 -9.202 0 -3.468 -1.176 -6.663 -3.153 -9.202 -0.126 -0.162 0.003 -0.396 0.207 -0.384 5.052 0.282 9.06 4.465 9.06 9.586 0 5.121 -4.005 9.304 -9.057 9.586Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value approximate"
          >
            2.57M
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Pending Stake
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M21,16.5C21,16.88 20.79,17.21 20.47,17.38L12.57,21.82C12.41,21.94 12.21,22 12,22C11.79,22 11.59,21.94 11.43,21.82L3.53,17.38C3.21,17.21 3,16.88 3,16.5V7.5C3,7.12 3.21,6.79 3.53,6.62L11.43,2.18C11.59,2.06 11.79,2 12,2C12.21,2 12.41,2.06 12.57,2.18L20.47,6.62C20.79,6.79 21,7.12 21,7.5V16.5M12,4.15L6.04,7.5L12,10.85L17.96,7.5L12,4.15M5,15.91L11,19.29V12.58L5,9.21V15.91M19,15.91V9.21L13,12.58V19.29L19,15.91Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            487,596
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Last Block
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
        data-tooltip-id="main-tooltip"
        data-tooltip-place="top"
        data-tooltip-text="Public: 13,742, Shielded: 2,621"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M9,3L5,7H8V14H10V7H13M16,17V10H14V17H11L15,21L19,17H16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            16,363
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Total Transactions
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            945
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Active Provisioners
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,5A3.5,3.5 0 0,0 8.5,8.5A3.5,3.5 0 0,0 12,12A3.5,3.5 0 0,0 15.5,8.5A3.5,3.5 0 0,0 12,5M12,7A1.5,1.5 0 0,1 13.5,8.5A1.5,1.5 0 0,1 12,10A1.5,1.5 0 0,1 10.5,8.5A1.5,1.5 0 0,1 12,7M5.5,8A2.5,2.5 0 0,0 3,10.5C3,11.44 3.53,12.25 4.29,12.68C4.65,12.88 5.06,13 5.5,13C5.94,13 6.35,12.88 6.71,12.68C7.08,12.47 7.39,12.17 7.62,11.81C6.89,10.86 6.5,9.7 6.5,8.5C6.5,8.41 6.5,8.31 6.5,8.22C6.2,8.08 5.86,8 5.5,8M18.5,8C18.14,8 17.8,8.08 17.5,8.22C17.5,8.31 17.5,8.41 17.5,8.5C17.5,9.7 17.11,10.86 16.38,11.81C16.5,12 16.63,12.15 16.78,12.3C16.94,12.45 17.1,12.58 17.29,12.68C17.65,12.88 18.06,13 18.5,13C18.94,13 19.35,12.88 19.71,12.68C20.47,12.25 21,11.44 21,10.5A2.5,2.5 0 0,0 18.5,8M12,14C9.66,14 5,15.17 5,17.5V19H19V17.5C19,15.17 14.34,14 12,14M4.71,14.55C2.78,14.78 0,15.76 0,17.5V19H3V17.07C3,16.06 3.69,15.22 4.71,14.55M19.29,14.55C20.31,15.22 21,16.06 21,17.07V19H24V17.5C24,15.76 21.22,14.78 19.29,14.55M12,16C13.53,16 15.24,16.5 16.23,17H7.77C8.76,16.5 10.47,16 12,16Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            34
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Pending Provisioners
        </span>
      </div>
       
    </div>
    <div
      class="statistics-panel__statistics-column"
    >
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M18,11H14.82C14.4,9.84 13.3,9 12,9C10.7,9 9.6,9.84 9.18,11H6C5.67,11 4,10.9 4,9V8C4,6.17 5.54,6 6,6H16.18C16.6,7.16 17.7,8 19,8A3,3 0 0,0 22,5A3,3 0 0,0 19,2C17.7,2 16.6,2.84 16.18,4H6C4.39,4 2,5.06 2,8V9C2,11.94 4.39,13 6,13H9.18C9.6,14.16 10.7,15 12,15C13.3,15 14.4,14.16 14.82,13H18C18.33,13 20,13.1 20,15V16C20,17.83 18.46,18 18,18H7.82C7.4,16.84 6.3,16 5,16A3,3 0 0,0 2,19A3,3 0 0,0 5,22C6.3,22 7.4,21.16 7.82,20H18C19.61,20 22,18.93 22,16V15C22,12.07 19.61,11 18,11M19,4A1,1 0 0,1 20,5A1,1 0 0,1 19,6A1,1 0 0,1 18,5A1,1 0 0,1 19,4M5,20A1,1 0 0,1 4,19A1,1 0 0,1 5,18A1,1 0 0,1 6,19A1,1 0 0,1 5,20Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            15
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Largest Node Cluster
        </span>
      </div>
      <div
        class="statistics-panel__statistics-item"
      >
        <div
          class="statistics-panel__statistics-item-value-container"
        >
          <svg
            class="dusk-icon dusk-icon--size--default"
            role="graphics-symbol"
            viewBox="0 0 24 24"
          >
            <path
              d="M12,11.5A2.5,2.5 0 0,1 9.5,9A2.5,2.5 0 0,1 12,6.5A2.5,2.5 0 0,1 14.5,9A2.5,2.5 0 0,1 12,11.5M12,2A7,7 0 0,0 5,9C5,14.25 12,22 12,22C12,22 19,14.25 19,9A7,7 0 0,0 12,2Z"
            />
          </svg>
          
           
          <div
            class="statistics-panel__statistics-item-value"
          >
            North Bergen, US
            
            
             
          </div>
        </div>
         
        <span
          class="statistics-panel__statistics-item-title"
        >
          Largest Cluster Location
        </span>
      </div>
       
    </div>
  </div>
</div>
`;
